--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "pnpm": "10"
   },
   "scripts": {
-    "dev": "tsx watch server.ts",
+    "dev": "exec vite",
     "build": "rm -rf dist/ && run-s build:*",
     "build:client": "tsc -b && vite build --outDir dist/client",
     "build:server": "tsc -b && vite build -c vite.ssr.config.ts --outDir dist/server --ssr src/entry-server.tsx",
@@ -30,12 +30,12 @@
   "dependencies": {
     "@tanstack/react-query": "5.72.2",
     "@tanstack/react-query-devtools": "5.72.2",
+    "@tanstack/react-router": "1.115.2",
     "compression": "1.8.0",
     "express": "5.1.0",
     "js-cookie": "3.0.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-router": "7.5.0",
     "serialize-javascript": "6.0.2",
     "server-timing": "3.3.3",
     "vite-plugin-mkcert": "1.17.8"
@@ -47,6 +47,8 @@
     "@svgr/plugin-svgo": "8.1.0",
     "@tailwindcss/vite": "4.1.3",
     "@tanstack/eslint-plugin-query": "5.72.2",
+    "@tanstack/react-router-devtools": "1.115.2",
+    "@tanstack/router-plugin": "1.115.2",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.3.0",
