--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
   },
   "scripts": {
     "dev": "exec vite",
-    "build": "rm -rf dist/ && run-s build:*",
-    "build:client": "tsc -b && vite build --outDir dist/client",
-    "build:server": "tsc -b && vite build -c vite.ssr.config.ts --outDir dist/server --ssr src/entry-server.tsx",
-    "prod": "NODE_ENV=production tsx server.ts",
+    "build": "rm -rf dist/ && tsc -b && vite build",
     "lint": "eslint src tests",
     "prettier:write": "prettier -w .",
     "prettier:check": "prettier -c .",
@@ -23,22 +20,16 @@
     "e2e": "exec playwright test",
     "e2e:ui": "exec playwright test --ui",
     "e2e:report": "exec playwright show-report",
-    "e2e:codegen": "exec playwright codegen http://localhost:3000",
+    "e2e:codegen": "exec playwright codegen https://csr-local.com:3000",
     "generate-pwa-assets": "pwa-assets-generator",
     "prepare": "git config --local core.hooksPath .githooks || echo 'An error occurred while installing the git hooks configuration'"
   },
   "dependencies": {
     "@tanstack/react-query": "5.72.2",
-    "@tanstack/react-query-devtools": "5.72.2",
     "@tanstack/react-router": "1.115.2",
-    "compression": "1.8.0",
-    "express": "5.1.0",
     "js-cookie": "3.0.5",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "serialize-javascript": "6.0.2",
-    "server-timing": "3.3.3",
-    "vite-plugin-mkcert": "1.17.8"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "9.24.0",
@@ -47,6 +38,7 @@
     "@svgr/plugin-svgo": "8.1.0",
     "@tailwindcss/vite": "4.1.3",
     "@tanstack/eslint-plugin-query": "5.72.2",
+    "@tanstack/react-query-devtools": "5.72.2",
     "@tanstack/react-router-devtools": "1.115.2",
     "@tanstack/router-plugin": "1.115.2",
     "@testing-library/dom": "10.4.0",
@@ -54,13 +46,10 @@
     "@testing-library/react": "16.3.0",
     "@testing-library/user-event": "14.6.1",
     "@trivago/prettier-plugin-sort-imports": "5.2.2",
-    "@types/compression": "1.7.5",
-    "@types/express": "5.0.1",
     "@types/js-cookie": "3.0.6",
     "@types/node": "22.14.0",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.2",
-    "@types/serialize-javascript": "5.0.4",
     "@vite-pwa/assets-generator": "1.0.0",
     "@vitejs/plugin-react-swc": "3.8.1",
     "@vitest/coverage-v8": "3.1.1",
@@ -87,7 +76,6 @@
     "sharp": "0.34.1",
     "svgo": "3.3.2",
     "tailwindcss": "4.1.3",
-    "tsx": "4.19.3",
     "typescript": "5.8.3",
     "typescript-eslint": "8.29.1",
     "unplugin-detect-duplicated-deps": "2.0.0",
@@ -95,8 +83,8 @@
     "vite": "6.2.6",
     "vite-bundle-analyzer": "0.18.1",
     "vite-plugin-image-optimizer": "1.1.8",
+    "vite-plugin-mkcert": "1.17.8",
     "vite-plugin-pwa": "1.0.0",
-    "vite-plugin-static-copy": "2.3.1",
     "vite-plugin-svgr": "4.3.0",
     "vite-plugin-unused-code": "0.1.6",
     "vite-tsconfig-paths": "5.1.4",
