--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -28,5 +28,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src", "server.ts", "vitest.setup.ts"]
+  "include": ["src", "vitest.setup.ts"]
 }
