--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "prettier:check": "prettier -c .",
     "types": "tsc --project tsconfig.app.json --noEmit",
     "analyze": "analyze --config vite.analyze.ts",
-    "test": "vitest --run",
-    "test:ui": "vitest --coverage --ui",
+    "test": "vitest --run --exclude tests",
+    "test:ui": "vitest --coverage --ui --exclude tests",
     "e2e": "exec playwright test",
     "e2e:ui": "exec playwright test --ui",
     "e2e:report": "exec playwright show-report",
@@ -38,6 +38,7 @@
     "@svgr/plugin-svgo": "8.1.0",
     "@tailwindcss/vite": "4.1.3",
     "@tanstack/eslint-plugin-query": "5.72.2",
+    "@tanstack/eslint-plugin-router": "1.115.0",
     "@tanstack/react-query-devtools": "5.72.2",
     "@tanstack/react-router-devtools": "1.115.2",
     "@tanstack/router-plugin": "1.115.2",
