--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "dev": "exec vite",
-    "build": "rm -rf dist/ && tsc -b && vite build",
+    "build": "rm -rf dist/ && vite build",
     "lint": "eslint src tests",
     "prettier:write": "prettier -w .",
     "prettier:check": "prettier -c .",
