--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -21,5 +21,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["vite.config.ts", "vite.alias.ts", "vite.analyze.ts", "playwright.config.ts", "tests"]
+  "include": ["vite.config.ts", "vite.analyze.ts", "playwright.config.ts", "tests"]
 }
