--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "csr",
   "private": true,
-  "version": "1.0.0",
+  "version": "2.0.0",
   "type": "module",
   "engines": {
     "node": "22.14.0",
@@ -29,7 +29,8 @@
     "@tanstack/react-router": "1.115.2",
     "js-cookie": "3.0.5",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "valibot": "1.0.0"
   },
   "devDependencies": {
     "@eslint/js": "9.24.0",
