--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "csr",
+  "name": "vite-react-csr",
   "private": true,
-  "version": "2.0.2",
+  "version": "2.0.3",
   "type": "module",
   "engines": {
     "node": "22.14.0",
